[package]
edition = "2021"
name = "femark"
authors = ["Ben Wishovich <ben@benw.is>"]
description = "A Markdown to HTML converter and code syntax highlighter using pulldown-cmark and treesitter."
repository = "https://github.com/benwis/femark"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.5"
keywords = ["markdown", "html", "syntax", "code", "highlighting"]
categories = ["web-programming::http-server"]

[dependencies]
eyre = "0.6.8"
once_cell = "1.18.0"
pulldown-cmark = "0.9.3"
pulldown-cmark-frontmatter = "0.2.0"
serde = { version = "1.0.188", features = ["derive"] }
slug = "0.1.4"
thiserror = "1.0.48"
tracing = "0.1.37"
tree-sitter = "0.20.10"
tree-sitter-c = "0.20.6"
tree-sitter-dockerfile = "0.1.0"
tree-sitter-go = "0.20.0"
tree-sitter-highlight = "0.20.1"
tree-sitter-html = "0.19.0"
tree-sitter-javascript = "0.20.1"
tree-sitter-json = "0.19.0"
tree-sitter-nix = "0.0.1"
tree-sitter-python = "0.20.4"
tree-sitter-rust = "0.20.4"
tree-sitter-toml = "0.20.0"
#tree-sitter-typescript = {git="https://github.com/tree-sitter/tree-sitter-typescript.git"}
tree-sitter-typescript = "0.20.3"
toml = "0.8.0"

[build-dependencies]
cc = "1.0"

[profile.release]
lto = "thin"


