[package]
edition = "2021"
name = "femark"
authors = ["Ben Wishovich <ben@benw.is>"]
description = "A Markdown to HTML converter and code syntax highlighter using pulldown-cmark and treesitter."
repository = "https://github.com/benwis/femark"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.3"
keywords = ["markdown", "html", "syntax", "code", "highlighting"]
categories = ["web-programming::http-server"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eyre = "0.6.8"
once_cell = "1.12.0"
pulldown-cmark = "0.9.1"
serde = {version="1.0.137", features=["derive"]}
slug = "0.1.4"
thiserror = "1.0.40"
tracing = "0.1.35"
tree-sitter = "0.20.6"
tree-sitter-c = "0.20.1"
tree-sitter-dockerfile = "0.1.0"
tree-sitter-go = "0.19.1"
tree-sitter-highlight = "0.20.1"
tree-sitter-html = "0.19.0"
tree-sitter-javascript = "0.20.0"
tree-sitter-json = "0.19.0"
tree-sitter-nix = "0.0.1"
tree-sitter-python = "0.19.1"
tree-sitter-rust = "0.20.1"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.20.1"
wit-bindgen = "0.19.1"

[profile.release]
lto = "thin"


